[package]
name = "wgpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
rand = "0.8.5"
